--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div class="button-create-wraper">
         <button id="todo-button-create">Створити Нотатку</button></div>
         <div class="todo-list-wrapper">
-            <div id="show-archive">Show</div>
+            <div id="show-archive">Показати Архів  <div id="show-archive-button"> <img id="show-archive-image-up" src="ShowArchiveUp.png" alt="">
+            <img id="show-archive-image-down" src="ShowArchiveDown.png" alt=""></div></div></div>
             <div class="todo-wrapper-info todo-wrapper-info-unactive">
 
             </div>
