--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     <li>Dates</li>
                 </ul>
                 <ul class="header-line-buttons">
-                    <li><button id="button-archive"><img class="Delete_button" src="archive.png"></button> </li>
+                    <li><button id="button-archive"><img class="Delete_button" src="./images/archive.png"></button> </li>
                     <li><button id="delete-button">
-                            <img class="Delete_button" src="garbage.png"></img></li>
+                            <img class="Delete_button" src="./images/garbage.png"></img></li>
                 </ul>
 
             </div>
@@ -92,8 +92,8 @@
         <div class="button-create-wraper">
         <button id="todo-button-create">Створити Нотатку</button></div>
         <div class="todo-list-wrapper">
-            <div id="show-archive">Показати Архів  <div id="show-archive-button"> <img id="show-archive-image-up" src="ShowArchiveUp.png" alt="">
-            <img id="show-archive-image-down" src="ShowArchiveDown.png" alt=""></div></div></div>
+            <div id="show-archive">Показати Архів  <div id="show-archive-button"> <img id="show-archive-image-up" src="./images/ShowArchiveUp.png" alt="">
+            <img id="show-archive-image-down" src="./images/ShowArchiveDown.png" alt=""></div></div></div>
             <div class="todo-wrapper-info todo-wrapper-info-unactive">
 
             </div>
@@ -112,7 +112,7 @@
                     </ul>
                 </div>
                 <div class="header-line-info header-line-info-item">
-                    <img src="thoughts.png" alt="">
+                    <img src="./images/thoughts.png" alt="">
                     <ul class="header-line header-line-info-lst">
 
                         <li>Random Thoughts</li>
@@ -124,7 +124,7 @@
                     </ul>
                 </div>
                 <div class="header-line-info header-line-info-item">
-                    <img src="idea.png" alt="">
+                    <img src="./images/idea.png" alt="">
 
                     <ul class="header-line header-line-info-lst">
 
@@ -137,7 +137,7 @@
                     </ul>
                 </div>
                 <div class="header-line-info header-line-info-item">
-                    <img src="task.png" alt="">
+                    <img src="./images/task.png" alt="">
 
                     <ul class="header-line header-line-info-lst">
 
@@ -151,8 +151,8 @@
                 </div>
             </div>
         </div>
-
         <script src="script.js"></script>
+
 </body>
 
 </html>
